--- a/Basement/Views/Main/Now Playing/NowPlaying.storyboard
+++ b/Basement/Views/Main/Now Playing/NowPlaying.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4Pg-Vx-qKg">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Profile Sample" translatesAutoresizingMaskIntoConstraints="NO" id="4Pg-Vx-qKg">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I2m-0g-VbW">
@@ -28,7 +28,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bem-hk-YVq" customClass="RoundImageView" customModule="Basement" customModuleProvider="target">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bem-hk-YVq" customClass="RoundImageView" customModule="Basement" customModuleProvider="target">
                                             <rect key="frame" x="20" y="74" width="374" height="374"/>
                                             <color key="backgroundColor" systemColor="quaternarySystemFillColor"/>
                                             <constraints>
@@ -164,7 +164,7 @@
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a3R-ku-CoZ" customClass="AVRoutePickerViewButton" customModule="Basement" customModuleProvider="target">
                                             <rect key="frame" x="39.5" y="792" width="50" height="50"/>
-                                            <color key="backgroundColor" systemColor="placeholderTextColor"/>
+                                            <color key="backgroundColor" white="1" alpha="0.096934260154257018" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="50" id="VAZ-2Q-tZ0"/>
                                                 <constraint firstAttribute="width" constant="50" id="eUq-h7-Qgc"/>
@@ -184,7 +184,7 @@
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s0t-vh-lKu" customClass="RoundButton" customModule="Basement" customModuleProvider="target">
                                             <rect key="frame" x="324.5" y="792" width="50" height="50"/>
-                                            <color key="backgroundColor" systemColor="placeholderTextColor"/>
+                                            <color key="backgroundColor" white="1" alpha="0.096934260154257018" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="50" id="a9f-yF-8wA"/>
                                                 <constraint firstAttribute="height" constant="50" id="auG-wi-vwx"/>
@@ -205,7 +205,7 @@
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fsV-Ol-bgX" customClass="RoundButton" customModule="Basement" customModuleProvider="target">
                                             <rect key="frame" x="109.5" y="792" width="195" height="50"/>
-                                            <color key="backgroundColor" systemColor="placeholderTextColor"/>
+                                            <color key="backgroundColor" white="1" alpha="0.096934260154257018" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="50" id="NFR-4l-q5i"/>
                                             </constraints>
@@ -244,7 +244,7 @@
                                         <constraint firstItem="QqY-77-d3d" firstAttribute="leading" secondItem="w7B-r4-Mtw" secondAttribute="trailing" constant="30" id="aIx-zD-2GV"/>
                                         <constraint firstItem="a3R-ku-CoZ" firstAttribute="centerX" secondItem="Ts1-u6-Xbc" secondAttribute="leading" id="bDH-cQ-vld"/>
                                         <constraint firstItem="a3R-ku-CoZ" firstAttribute="top" secondItem="fsV-Ol-bgX" secondAttribute="top" id="bER-F3-wgY"/>
-                                        <constraint firstItem="bem-hk-YVq" firstAttribute="bottom" secondItem="bUo-A5-mBR" secondAttribute="centerY" priority="750" id="cDQ-JA-jSn"/>
+                                        <constraint firstItem="bem-hk-YVq" firstAttribute="bottom" secondItem="bUo-A5-mBR" secondAttribute="centerY" id="cDQ-JA-jSn"/>
                                         <constraint firstItem="fqk-bC-yCu" firstAttribute="leading" secondItem="daz-3n-8xA" secondAttribute="leading" id="cu4-s5-EVt"/>
                                         <constraint firstAttribute="trailing" secondItem="daz-3n-8xA" secondAttribute="trailing" constant="30" id="eJU-0H-hZl"/>
                                         <constraint firstItem="Ts1-u6-Xbc" firstAttribute="top" secondItem="w7B-r4-Mtw" secondAttribute="top" id="ed4-JK-TX7"/>
@@ -469,6 +469,7 @@
         </designable>
     </designables>
     <resources>
+        <image name="Profile Sample" width="665" height="1182"/>
         <image name="airplayaudio" catalog="system" width="128" height="121"/>
         <image name="arrow.left" catalog="system" width="128" height="98"/>
         <image name="backward.fill" catalog="system" width="128" height="77"/>
@@ -486,9 +487,6 @@
         <namedColor name="Table View Cell">
             <color red="0.12300000339746475" green="0.13899999856948853" blue="0.17200000584125519" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
-        <systemColor name="placeholderTextColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="quaternarySystemFillColor">
             <color red="0.45490196078431372" green="0.45490196078431372" blue="0.50196078431372548" alpha="0.080000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
